--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,11 @@ border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  display: none;
 }
 
+@media(max-width:1250px){
+ .benefits__images{
+  width: 40%;
+ }
+}
 
 @media(max-width:1140px){
 .rent__inner{
@@ -549,6 +554,25 @@ border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding-top: 50px;
   text-align: center;
  }
+
+ .benefits__items{
+  flex-wrap: wrap;
+  justify-content: space-around0;
+ }
+
+ .benefits__text + .benefits__text{
+  width: 100%;
+ }
+
+ .benefits__content{
+  width: 100%;
+  margin-top: 30px;
+ }
+ 
+ .footer.menu{
+  display: none;
+   }
+  
 }
 
 
@@ -602,7 +626,40 @@ background-color: #fefefe;
 left: 0;
 top: 9px;
 }
+
+.rent__item{
+ margin: 30px;
 }
+
+.feedback__img{
+ display: none;
+}
+
+.rent,
+.benefits,
+.reviews,
+.feedback,
+.footer{
+ padding: 50px 0;
+}
+}
+
+@media(max-width:650px){
+.rent__item{
+width:100%;
+min-height: 245px;
+}
+
+.rent__item-title{
+ margin-bottom: 20px;
+}
+
+
+.rent__content{
+ text-align: center
+}
+}
+
 
 @media(max-width:525px){
  .top__items{
@@ -616,6 +673,42 @@ top: 9px;
  .top__slider-text{
   padding-right: 0;
  }
+
+ .benefits__images{
+  width: 70%;
+ }
+
+ .benefits__list{
+  width: 100%;
+ }
+
+ .benefits__list-item{
+  margin: 0;
+  text-align: left;
+  padding-right: 0;
+  padding-left: 26px;
+ }
+
+ .benefits__list-item::after{
+  right: auto;
+  left: 0;
+ }
+
+ .benefits__list-item:nth-child(4){
+  margin-right: 0;
+ }
+ }
+ 
+ @media(max-width:450px){
+  .footer__top{
+   flex-direction: column;
+   align-items: center;
+  }
+
+  .footer .phone{
+   margin-top: 30px;
+   display: inline-block;
+  }
  }
 
 @media(max-width:410px){
@@ -644,5 +737,9 @@ display: inline-block;
  display: block;
  margin: 10px 0;
 }
+
+.rent__item{
+ margin: 30px 0;
+ }
 }
 
